# PenguinScan

./: .gitignore  CMakeLists.txt  README.md
build_linux/: Makefile  PenguinScan
docs/: architecture.md
include/: ScanTypes.h
include/cli/: ArgParser.h
include/engine/: ScanningEngine.h
include/net/: Platform.h  ScanResult.h  SocketContext.h  TcpSocket.h
include/util/: IpUtils.h  Reporter.h
src/: PenguinScan  main.cpp  results.json
src/cli/: ArgParser.cpp
src/engine/: ScanningEngine.cpp
src/net/: SocketContext.cpp  TcpSocket.cpp
src/util/: IpUtils.cpp  Reporter.cpp
